--- a/add-on/package.json
+++ b/add-on/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "search-how-many-people",
-  "title": "search-how-many-people",
+  "name": "people-counter",
+  "title": "people-counter",
   "id": "jid1-OWDAsISamuUmkw",
   "description": "Show how many people in a place for a google search.",
   "author": "",
