Change add-on title: people-counter => People Counter

--- a/add-on/package.json
+++ b/add-on/package.json
@@ -1,6 +1,6 @@
 {
   "name": "people-counter",
-  "title": "people-counter",
+  "title": "People Counter",
   "id": "jid1-OWDAsISamuUmkw",
   "description": "Show how many people in a place for a google search.",
   "author": "Evan Tseng <evan@tseng.io>",
